clean up PackageReader stage 4